1-11于1-14更新过项目

--- a/1-11/pages/aa/aa.wxss
+++ b/1-11/pages/aa/aa.wxss
@@ -148,3 +148,30 @@ checkbox{
 .tab-right .right-item.active{
     display: block;
 }
+
+
+.searchbar-result{
+    margin-top: 0;
+    font-size: 14px;
+}
+.searchbar-result:before{
+    display: none;
+}
+.weui-cell{
+    padding: 12px 15px 12px 35px;
+}
+
+
+
+page,
+.page,
+.page__bd{
+    height: 100%;
+}
+.page__bd{
+    padding-bottom: 0;
+}
+.weui-tab__content{
+    padding-top: 60px;
+    text-align: center;
+}
