--- a/WX/demo1/pages/index/index.wxml
+++ b/WX/demo1/pages/index/index.wxml
@@ -1,4 +1,95 @@
-<swiper indicator-dots="ture" autoplay="true" interval="1500" duration="500">
+<view class="titles">
+  <!--绑定事件处理函数bindtap-->
+  <!--给选中的组件，即数组当前项的下标与selectedTitle相等的组件，定义样式名titles-selected-->
+  <block wx:for="{{titles}}">
+    <view id="{{index}}" bindtap="bindtap" class="title {{index==selectedTitle ? 'title-selected' : ''}}">
+      {{item}}
+    </view>
+  </block>
+</view>
+<!--绑定事件处理函数bindchange-->
+<swiper bindchange="bindChange" current='{{selectedTitle}}' style="height:{{swiperHeight}}px">
+  <block wx:for="{{titles}}">
+    <swiper-item>
+      <!--设置5个样式名-->
+      <view class='page bc_{{item}}'>{{item}}</view>
+    </swiper-item>
+  </block>
+</swiper>
+
+
+
+
+
+
+
+<!--checkbox-->
+<view class="none">	
+<text class="">checkbox</text>
+<checkbox-group class="group" bindchange="checkboxChange">
+  <view class="checkbox-1" wx:for="{{checkboxItems}}">
+    <label>
+    <view class="checkbox-L">
+      <checkbox hidden value="{{item.name}}" checked="{{item.checked}}"></checkbox>
+      <view class="checkbox__icon">
+        <view class="checkbox__icon-checked" style="opacity:{{item.checked ? 1: 0}}"></view>
+      </view>
+      </view>
+
+      <view class="checkbox-R">{{item.value}}</view>
+    </label>
+  </view>
+</checkbox-group>
+</view>
+<!--checkbox End-->
+<!--radio-->
+<view class="none">	
+<text class="">radio</text>
+<radio-group class="group" bindchange="radioChange">
+  <view class="radio-2" wx:for="{{radioItems}}">
+  <label>
+    <view class="radio-L">
+      <radio id="{{item.name}}" hidden value="{{item.name}}" checked="{{item.checked}}" />
+      <view class="radio__icon">
+        <view class="radio__icon-checked" style="opacity:{{item.checked ? 1: 0}}"></view>
+      </view>
+      </view>
+      <view class="radio-R">{{item.name}}</view>
+    </label>
+  </view>
+  </radio-group>
+  </view>
+<!--radio End-->
+
+
+<view class="">
+	
+ <view class="weui-tab">
+            <view class="weui-navbar">
+                <block wx:for-items="{{tabs}}" wx:key="{{index}}">
+                    <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
+                        <view class="weui-navbar__title">{{item}}</view>
+                    </view>
+                </block>
+                <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
+            </view>
+            <view class="weui-tab__panel">
+                <view class="weui-tab__content" hidden="{{activeIndex != 0}}">选项一的内容
+                <view class="" style="height:200px; background:red;">1111</view></view>
+                <view class="weui-tab__content" hidden="{{activeIndex != 1}}">选项二的内容</view>
+                <view class="weui-tab__content" hidden="{{activeIndex != 2}}">选项三的内容</view>
+            </view>
+ </view>
+
+
+</view>
+
+
+
+
+
+<view class="" style="margin-top:100px;">
+<swiper indicator-dots="ture" interval="1500" duration="500" class="">
 	<swiper-item>
 		<image src="../../images/1.jpg" class="slide-image" width="" height=""/>
 	</swiper-item>
@@ -8,8 +99,15 @@
 	</swiper-item>
 </swiper>
 
+<view class="dots">
+      <block wx:for="{{slider}}" wx:key="unique">
+        <view class="dot{{index == swiperCurrent ? ' active' : ''}}"></view>
+      </block>
+    </view>
+</view>
+
 <!--one 1-->
-<view class="one none">
+<view class="one">
 	<view class="one--title">
 		<text class="L">Title</text>
 		<text class="R">More</text>
@@ -40,7 +138,7 @@
 <!--one End-->
 
 <!--two 2-->
-<view class="two none">
+<view class="two">
 	<view class="two--title">
 		<text class="L">Title</text>
 		<text class="R">More</text>
@@ -78,8 +176,14 @@
 	</view>
 </view>
 <!--two 2 End-->
+
+
+
+
+
+
 <!--three 3-->
-<view class="three none">
+<view class="three">
 	<view class="three--title">
 		Hello
 	</view>
@@ -98,16 +202,14 @@
 		</view>
 
 		<view class="three--con--list">
-			<text class="three--con--list--L">
-			22
-			</text>
+			<text class="three--con--list--L">22</text>
 			<text class="three--con--list--R">haskhkf</text>
 		</view> 
 		<label class="" for="">
 		<view class="three--con--list">
 		
 			<view class="three--con--list--L">111</view>
-			<view class="three--con--list--R"><radio value="" /></view>
+			<view class="three--con--list--R"><radio  value="" /></view>
 			
 		</view>
 		</label>
@@ -116,7 +218,7 @@
 		<view class="three--con--list">
 		
 			<view class="three--con--list--L">
-			<checkbox value="" checked="checked"/>
+			<checkbox value="" checked="checked" style="margin:0px; padding:0px; display:block;border:1px red solid;"/>
 			</view>
 			<view class="three--con--list--R">r</view>
 			
@@ -127,7 +229,7 @@
 </view>
 <!--three 3 End-->
 <!--four 4-->
-<view class="four none">
+<view class="four">
 	<view class="four--title">
 		第四条
 	</view>
@@ -178,7 +280,7 @@
 <!--four 4 End-->
 
 <!--five 5-->
-<view class="five none">
+<view class="five">
 	<view class="five--title">	
 		第五条
 	</view>
@@ -350,6 +452,7 @@
 	</view>
 </view>
 <!--six 6 End-->
+
 
 
 
