--- a/WX/demo1/wei-ui.wxss
+++ b/WX/demo1/wei-ui.wxss
@@ -158,9 +158,9 @@ icon {
   word-break: break-all;
 }
 .weui-input {
-  height: 2.58823529em;
+  /*height: 2.58823529em;*/
   min-height: 2.58823529em;
-  line-height: 2.58823529em;
+  /*line-height: 2.58823529em;*/
 }
 .weui-toptips {
   position: fixed;
