--- a/WX/demo1/pages/index/index.wxss
+++ b/WX/demo1/pages/index/index.wxss
@@ -1,10 +1,119 @@
 /*checkbox radio*/
 @import 'checkbox-radio.wxss';
 @import 'tab.wxss';
-@import 'searchbar.wxss';
+/*@import 'searchbar.wxss';*/
 
 
 
+
+/**index.wxss**/
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+}
+
+.userinfo-nickname {
+  color: #aaa;
+}
+
+.usermotto {
+  margin-top: 200px;
+}
+.commodity_screen {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.2;
+  overflow: hidden;
+  z-index: 1000;
+  color: #fff;
+}
+
+.commodity_attr_box {
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 2000;
+  background: #fff;
+  /*display: flex;
+  flex-direction: column;
+  justify-content: center;*/
+}
+.btn-line{
+  width: 1px;
+  background-color: #A5A5A5;
+}
+.btn-view{
+  width: 100%;
+  display: flex;
+  height: 40px;
+  flex-direction: row;
+  justify-content: space-around
+}
+.line-top{
+   width: 100%;
+   height: 1px;
+   background-color: #A5A5A5;
+}
+.btn-cancel{
+  width: 49%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.dialog-title{
+  margin-top: 20px;
+  text-align: center;
+  margin-bottom: 15px;
+
+}
+.input-style{
+  width: 96%;
+  margin-left: 2%;
+  height: 30px;
+  text-align: center;
+}
+
+.input-view{
+  height: 30px;
+  width: 70%;
+  margin-left: 15%;
+  border: 1px #A5A5A5 solid;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+
+
+
+
+.search-one{
+	/*background: red*/
+}
+ input{
+	width: 746rpx;
+	height:80rpx;
+	line-height: 80rpx;
+	border: 1px red solid;
+	color: #fff;
+	padding:10px 0;
+	height: 0px;
+}
 
 swiper{
 	height: 450rpx;
