--- a/WX/demo1/pages/index/index.wxss
+++ b/WX/demo1/pages/index/index.wxss
@@ -3,99 +3,116 @@
 @import 'tab.wxss';
 /*@import 'searchbar.wxss';*/
 
-
+.a-center{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	position: fixed;
+	z-index: 99;
+	background-color: #ccc;
+	min-height: calc(100vh);
+}
+.content-center{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 40%;
+	height: auto;
+	background: #FA8066;
+}
 
 
 /**index.wxss**/
 .userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+	width: 128rpx;
+	height: 128rpx;
+	margin: 20rpx;
+	border-radius: 50%;
 }
 
 .userinfo-nickname {
-  color: #aaa;
+	color: #aaa;
 }
 
 .usermotto {
-  margin-top: 200px;
+	margin-top: 200px;
 }
 .commodity_screen {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: #000;
-  opacity: 0.2;
-  overflow: hidden;
-  z-index: 1000;
-  color: #fff;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: #000;
+	opacity: 0.2;
+	overflow: hidden;
+	z-index: 1000;
+	color: #fff;
 }
 
 .commodity_attr_box {
-  width: 100%;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: 2000;
-  background: #fff;
+	width: 100%;
+	overflow: hidden;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	z-index: 2000;
+	background: #fff;
   /*display: flex;
   flex-direction: column;
   justify-content: center;*/
 }
 .btn-line{
-  width: 1px;
-  background-color: #A5A5A5;
+	width: 1px;
+	background-color: #A5A5A5;
 }
 .btn-view{
-  width: 100%;
-  display: flex;
-  height: 40px;
-  flex-direction: row;
-  justify-content: space-around
+	width: 100%;
+	display: flex;
+	height: 40px;
+	flex-direction: row;
+	justify-content: space-around
 }
 .line-top{
-   width: 100%;
-   height: 1px;
-   background-color: #A5A5A5;
+	width: 100%;
+	height: 1px;
+	background-color: #A5A5A5;
 }
 .btn-cancel{
-  width: 49%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	width: 49%;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 .dialog-title{
-  margin-top: 20px;
-  text-align: center;
-  margin-bottom: 15px;
+	margin-top: 20px;
+	text-align: center;
+	margin-bottom: 15px;
 
 }
 .input-style{
-  width: 96%;
-  margin-left: 2%;
-  height: 30px;
-  text-align: center;
+	width: 96%;
+	margin-left: 2%;
+	height: 30px;
+	text-align: center;
 }
 
 .input-view{
-  height: 30px;
-  width: 70%;
-  margin-left: 15%;
-  border: 1px #A5A5A5 solid;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  margin-top: 20px;
+	height: 30px;
+	width: 70%;
+	margin-left: 15%;
+	border: 1px #A5A5A5 solid;
+	border-radius: 5px;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 
@@ -105,7 +122,7 @@
 .search-one{
 	/*background: red*/
 }
- input{
+input{
 	width: 746rpx;
 	height:80rpx;
 	line-height: 80rpx;
@@ -124,23 +141,23 @@ swiper{
 }
 
 .swiper-box .wx-swiper-dots.wx-swiper-dots-horizontal{
-     margin-bottom: 2rpx;
+	margin-bottom: 2rpx;
 }
 .swiper-box .wx-swiper-dot{
-    width:40rpx;
-    display: inline-flex;
-    height: 10rpx;
-    margin-left: 20rpx;
-    justify-content:space-between;
+	width:40rpx;
+	display: inline-flex;
+	height: 10rpx;
+	margin-left: 20rpx;
+	justify-content:space-between;
 }
 .swiper-box .wx-swiper-dot::before{
-    content: '';
-    flex-grow: 1; 
-    background: rgba(255,255,255,0.8);
-    border-radius: 8rpx
+	content: '';
+	flex-grow: 1; 
+	background: rgba(255,255,255,0.8);
+	border-radius: 8rpx
 }
 .swiper-box .wx-swiper-dot-active::before{
-    background:rgba(244,0,0,0.8);   
+	background:rgba(244,0,0,0.8);   
 }
 
 
@@ -157,9 +174,9 @@ swiper{
 
 
 .checkbox{
-   display: block;
-   margin: 20px;
-   background: red
+	display: block;
+	margin: 20px;
+	background: red
 }
 
 
@@ -334,8 +351,8 @@ swiper{
 	font-size: 12px;
 }
 .three--con--list:nth-child(2) {
-  color:#fff;
-  background: blue
+	color:#fff;
+	background: blue
 }
 
 .three--con--list--L--a{
@@ -459,8 +476,8 @@ swiper{
 	display: flex;
 	flex-grow: 1;
 	flex-direction: column;
-  justify-content: space-between;
-  /*flex-direction: row;*/
+	justify-content: space-between;
+	/*flex-direction: row;*/
 	
 }
 .five--parameter--R--A,.five--parameter--R--B{
