--- a/a-one/pages/index/index.wxml
+++ b/a-one/pages/index/index.wxml
@@ -129,7 +129,7 @@
 			<view class="two-list">
 				<view class="two-list-con">
 					<view class="two-list-con-img">
-						<image src="../../images/a.jpg"  />
+						<image src="http://tu.yi23.net/yi23img/postings/cover/810867053cd942758842bb97d6d1e0ee.jpg!750"  />
 						<view class="two-list-con-user">
 							<image src="../../images/1.jpg" />
 						</view>
