--- a/test-jd/pages/index/index.wxss
+++ b/test-jd/pages/index/index.wxss
@@ -82,13 +82,32 @@ page {
 
 .con-content{
   display: flex;
-  width: 100%;
+  /* width: 100%; */
+  background: #fff;
+  padding: 10px;
+  -moz-box-shadow:0px 0px 8px red; 
+  -webkit-box-shadow:0px 0px 8px red; 
+  box-shadow:0px 0px 8px red;
+  margin-bottom: 40rpx;
 }
 .con-content-L{
   width: 200rpx;
   height: 200rpx;
   background: green;
   display: flex; 
+  position: relative;
+}
+.woc{
+  position: absolute;
+  left: -5px;
+  top: -5px;
+  width: 40px;
+  height: 20px;
+  background: yellow;
+  font-size: 12px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 .con-content-L image{
   width: 100%;
@@ -99,6 +118,7 @@ page {
   height: auto;
   display: flex;
   flex-wrap: wrap;
+  padding-left:20rpx;
 }
 
 .h2,
@@ -130,6 +150,8 @@ overflow: hidden;
   background: red;
   border:0px red solid;
   border-radius: 0px;
+  font-size: 12px;
+  color: #fff;
 }
 
 
