--- a/test-jd/pages/index/index.wxss
+++ b/test-jd/pages/index/index.wxss
@@ -101,7 +101,7 @@ page {
   position: absolute;
   left: -5px;
   top: -5px;
-  width: 40px;
+  width: 20px;
   height: 20px;
   background: yellow;
   font-size: 12px;
@@ -130,6 +130,12 @@ display:flex;
 justify-content:flex-start;
 align-content:center;
 font-size: 12px;
+}
+.h3{
+  font-size: 20px;
+   height: 25px; 
+   display: flex;
+   /* background: #999;  */
 }
 .h33{
   color: red;
