--- a/test-jd/pages/index/index.wxss
+++ b/test-jd/pages/index/index.wxss
@@ -29,8 +29,11 @@ page {
   text-align: center;
   font-size: 14px;
   margin-top: 40rpx;
+  color: green;
 }
-
+.psection{
+  color:blue;
+}
 .sc-con {
   white-space: nowrap;
   display: flex;
