--- a/test-jd/pages/index/index.wxss
+++ b/test-jd/pages/index/index.wxss
@@ -46,7 +46,7 @@ page {
 .sc-conList {
   width: 20%;
   padding: 0;
-  margin:0 10rpx;
+  margin-right:2%;
   height: 150rpx;
   display: inline-block;
 }
@@ -93,6 +93,7 @@ page {
   -webkit-box-shadow:0px 0px 8px red; 
   box-shadow:0px 0px 8px red;
   margin-bottom: 40rpx;
+  border-radius: 6rpx;
 }
 .con-content-L{
   width: 200rpx;
